fixed the search bar collapse issue, by changing the positioning of #filter_section to absolute and top: -20. (lines 43, 44)

--- a/blur-admin/app/assets/stylesheets/search.scss
+++ b/blur-admin/app/assets/stylesheets/search.scss
@@ -40,8 +40,8 @@
     width: 100%;
     z-index: 999;
     @include standard-font;
-    position: fixed;
-    top: 40px;
+    position: absolute;
+    top: -20px;
     left: 0;
     padding: 10px 0px 0px 10px;
     @include box-sizing(border-box);
